[package]
name = "avr-test"
version = "0.1.0"
authors = ["noname"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.3"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "885e8ec"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"